# docs/swagger.yaml
@@ -14,6 +14,38 @@ info:
   title: Silk Road
   version: 1.0.0
 paths:
+  /v1/admin/login:
+    post:
+      consumes:
+      - application/json
+      description: 管理员使用用户名和密码进行登录
+      parameters:
+      - description: 用户名
+        in: body
+        name: username
+        required: true
+        schema:
+          type: string
+      - description: 密码
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"message":"登录成功！","result":null}'
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: '{"success":false,"message":"用户名或密码错误！","result":null}'
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: 管理员登录
+      tags:
+      - 管理员
   /v1/admin/settings/{key}:
     put:
       consumes:
